# LUNETTE

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.cursor/: instructions.txt
components/api/: CMakeLists.txt  api_registry.c  api_utils.c
components/api/handlers/: CMakeLists.txt  logical_ops_handler.c  oscillator_handler.c  web_audio_handler.c
components/api/handlers/include/: logical_ops_handler.h  oscillator_handler.h  web_audio_handler.h
components/api/include/: api_registry.h  api_types.h  api_utils.h
components/web_server/: CMakeLists.txt  api.c  idf_component.yml  style.css  web_server.c
components/web_server/certs/: certificate.pem  csr.pem  private_key.pem
components/web_server/include/: api.h  web_server.h
components/web_server/static/: README.md  audio-stream.js  index.html  not-used.css  not-used.js  scripts.js  style.css  value-control.css  value-control.js
components/web_server/static/lunette/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
components/web_server/static/lunette/public/worklets/: reverb-algo-worklet.js
components/web_server/static/lunette/src/: App.tsx  index.css
components/web_server/static/lunette/src/algorithm/algorithm-4o3l/: algorithm-block.css  algorithm-block.tsx
components/web_server/static/lunette/src/api/: baseApi.ts  index.ts  logicBlockApi.ts  oscillatorApi.ts
components/web_server/static/lunette/src/assets/: audio-worklet.js  reverb-algo-worklet.js
components/web_server/static/lunette/src/audio/: clientOscillator.test.ts  clientOscillator.ts  envelop.ts  index.ts  output-filters.ts  reverbAlgo.ts  webSocketAudioInput.ts
components/web_server/static/lunette/src/contexts/: EffectsContext.tsx  OscillatorContext.test.tsx  OscillatorContext.tsx  touch-context.tsx
components/web_server/static/lunette/src/controls/logic-block/: logic-block.css  logic-block.tsx
components/web_server/static/lunette/src/controls/mixer-block/: mixer-block.tsx
components/web_server/static/lunette/src/controls/oscillator-control/: oscillator-control.css  oscillator-control.test.tsx  oscillator-control.tsx
components/web_server/static/lunette/src/controls/piano-control/: piano-control.css  piano-control.tsx
components/web_server/static/lunette/src/controls/round-slider-control/: round-slider-control.css  round-slider-control.tsx
components/web_server/static/lunette/src/interfaces/: AudioParamList.tsx
components/web_server/static/lunette/src/screens/: effects-screen.css  effects-screen.tsx  keyboard-screen.css  keyboard-screen.tsx  main-screen.css  main-screen.tsx  sequencer-screen.tsx
components/web_server/static/lunette/src/utils/: customDebounce.ts  index.ts  noteFreq.ts
design_docs/: reame.md
main/: main.c  (+1 more)
(+51 files in other folders)
